--- a/lk11.html
+++ b/lk11.html
@@ -142,7 +142,8 @@
             </div>
             <div class="r_p" style="padding-right: 0">
               <div class="nav_links nav_links_t">
-                <a class="brd_green fill w50 add_partner add_partner_adaptive" href="#" style="width: auto; margin-top: 0; float: right">Добавить нового партнера</a>
+                <a class="brd_green fill w50 add_partner add_partner_adaptive" href="#" style="margin-top: 0; float: right">Добавить нового партнера</a>
+                <a class="brd_green fill w50 add_partner add_partner_adaptive" href="#" style="margin-top: 0; float: left">Трансфер</a>
               </div>
             </div>
             <div class="f_part">
@@ -151,13 +152,14 @@
                   <li><a href="#">Экспорт в xls</a></li>
                 </ul>
               </div>
-              <div class="middle_part">
+              <div class="middle_part middle_part_tooltip">
                 <table class="otch_p fixtable">
                   <thead>
                     <tr class="head_t">
                       <th>Номер</th>
                       <th>ФИО</th>
                       <th>Тип соглашения</th>
+                      <th>Расчетный ранг</th>
                       <th>Скидка</th>
                       <th>Лицевой счет</th>
                       <th>ЛО</th>
@@ -170,15 +172,29 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <tr>
+                    <tr class="tooltip_block">
                       <td>
                         <div>
                           <a href="#" class="lt3" style="text-decoration: underline; margin-bottom: 15px">921008</a>
                           <span class="lt3">Томск-Кондырева</span>
                         </div>
                       </td>
-                      <td>Михайлов Д. И.</td>
+                      <td>
+                        <span>Михайлов Д. И.</span>
+                        <div class="tooltip_block_hover">
+                          <img src="./images/closebig.svg" alt="closebig" class="tooltip_block_hover_close">
+                          <div style="width: 90%">
+                            <h2 class="tooltip_block_hover_title">Перейти на страницы</h2>
+                            <a href="#" class="tooltip_block_hover_link">История показателей партнёра по периодам</a>
+                            <a href="#" class="tooltip_block_hover_link">История показателей партнёра по периодам</a>
+                            <a href="#" class="tooltip_block_hover_link">История показателей партнёра по периодам</a>
+                            <a href="#" class="tooltip_block_hover_link">История показателей партнёра по периодам</a>
+                          </div>
+                          <div class="triangle"></div>
+                        </div>
+                      </td>
                       <td>Дистрибьютор</td>
+                      <td>Консультант</td>
                       <td>33</td>
                       <td>
                         <div>
@@ -193,15 +209,29 @@
                       <td>1235</td>
                       <td>0</td>
                     </tr>
-                    <tr>
+                    <tr class="tooltip_block">
                       <td>
                         <div>
                           <a href="#" class="lt3" style="text-decoration: underline; margin-bottom: 15px">921008</a>
                           <span class="lt3">Томск-Кондырева</span>
                         </div>
                       </td>
-                      <td>Михайлов Д. И.</td>
+                      <td>
+                        <span>Михайлов Д. И.</span>
+                        <div class="tooltip_block_hover">
+                          <img src="./images/closebig.svg" alt="closebig" class="tooltip_block_hover_close">
+                          <div style="width: 90%">
+                            <h2 class="tooltip_block_hover_title">Перейти на страницы</h2>
+                            <a href="#" class="tooltip_block_hover_link">История показателей партнёра по периодам</a>
+                            <a href="#" class="tooltip_block_hover_link">История показателей партнёра по периодам</a>
+                            <a href="#" class="tooltip_block_hover_link">История показателей партнёра по периодам</a>
+                            <a href="#" class="tooltip_block_hover_link">История показателей партнёра по периодам</a>
+                          </div>
+                          <div class="triangle"></div>
+                        </div>
+                      </td>
                       <td>Дистрибьютор</td>
+                      <td>Консультант</td>
                       <td>33</td>
                       <td>
                         <div>
@@ -216,15 +246,29 @@
                       <td>1235</td>
                       <td>0</td>
                     </tr>
-                    <tr>
+                    <tr class="tooltip_block">
                       <td>
                         <div>
                           <a href="#" class="lt3" style="text-decoration: underline; margin-bottom: 15px">921008</a>
                           <span class="lt3">Томск-Кондырева</span>
                         </div>
                       </td>
-                      <td>Михайлов Д. И.</td>
+                      <td>
+                        <span>Михайлов Д. И.</span>
+                        <div class="tooltip_block_hover">
+                          <img src="./images/closebig.svg" alt="closebig" class="tooltip_block_hover_close">
+                          <div style="width: 90%">
+                            <h2 class="tooltip_block_hover_title">Перейти на страницы</h2>
+                            <a href="#" class="tooltip_block_hover_link">История показателей партнёра по периодам</a>
+                            <a href="#" class="tooltip_block_hover_link">История показателей партнёра по периодам</a>
+                            <a href="#" class="tooltip_block_hover_link">История показателей партнёра по периодам</a>
+                            <a href="#" class="tooltip_block_hover_link">История показателей партнёра по периодам</a>
+                          </div>
+                          <div class="triangle"></div>
+                        </div>
+                      </td>
                       <td>Дистрибьютор</td>
+                      <td>Консультант</td>
                       <td>33</td>
                       <td>
                         <div>
@@ -239,15 +283,29 @@
                       <td>1235</td>
                       <td>0</td>
                     </tr>
-                    <tr>
+                    <tr class="tooltip_block">
                       <td>
                         <div>
                           <a href="#" class="lt3" style="text-decoration: underline; margin-bottom: 15px">921008</a>
                           <span class="lt3">Томск-Кондырева</span>
                         </div>
                       </td>
-                      <td>Михайлов Д. И.</td>
+                      <td>
+                        <span>Михайлов Д. И.</span>
+                        <div class="tooltip_block_hover">
+                          <img src="./images/closebig.svg" alt="closebig" class="tooltip_block_hover_close">
+                          <div style="width: 90%">
+                            <h2 class="tooltip_block_hover_title">Перейти на страницы</h2>
+                            <a href="#" class="tooltip_block_hover_link">История показателей партнёра по периодам</a>
+                            <a href="#" class="tooltip_block_hover_link">История показателей партнёра по периодам</a>
+                            <a href="#" class="tooltip_block_hover_link">История показателей партнёра по периодам</a>
+                            <a href="#" class="tooltip_block_hover_link">История показателей партнёра по периодам</a>
+                          </div>
+                          <div class="triangle"></div>
+                        </div>
+                      </td>
                       <td>Дистрибьютор</td>
+                      <td>Консультант</td>
                       <td>33</td>
                       <td>
                         <div>
@@ -262,15 +320,29 @@
                       <td>1235</td>
                       <td>0</td>
                     </tr>
-                    <tr>
+                    <tr class="tooltip_block">
                       <td>
                         <div>
                           <a href="#" class="lt3" style="text-decoration: underline; margin-bottom: 15px">921008</a>
                           <span class="lt3">Томск-Кондырева</span>
                         </div>
                       </td>
-                      <td>Михайлов Д. И.</td>
+                      <td>
+                        <span>Михайлов Д. И.</span>
+                        <div class="tooltip_block_hover">
+                          <img src="./images/closebig.svg" alt="closebig" class="tooltip_block_hover_close">
+                          <div style="width: 90%">
+                            <h2 class="tooltip_block_hover_title">Перейти на страницы</h2>
+                            <a href="#" class="tooltip_block_hover_link">История показателей партнёра по периодам</a>
+                            <a href="#" class="tooltip_block_hover_link">История показателей партнёра по периодам</a>
+                            <a href="#" class="tooltip_block_hover_link">История показателей партнёра по периодам</a>
+                            <a href="#" class="tooltip_block_hover_link">История показателей партнёра по периодам</a>
+                          </div>
+                          <div class="triangle"></div>
+                        </div>
+                      </td>
                       <td>Дистрибьютор</td>
+                      <td>Консультант</td>
                       <td>33</td>
                       <td>
                         <div>
