--- a/lk15.html
+++ b/lk15.html
@@ -480,6 +480,7 @@
                       <th>Цена розничная</th>
                       <th>Цена продажи</th>
                       <th>Скидка</th>
+                      <th>Баллов за единицу</th>
                       <th>Кол-во</th>
                       <th>Стоимость</th>
                       <th>Возвращено</th>
@@ -495,17 +496,6 @@
                       <td>1076.40</td>
                       <td>15%</td>
                       <td>34</td>
-                      <td>1076.40</td>
-                      <td>1076.40</td>
-                      <td>10.3</td>
-                    </tr>
-                    <tr>
-                      <td>42451467</td>
-                      <td>42451467</td>
-                      <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
-                      <td>1076.40</td>
-                      <td>1076.40</td>
-                      <td>15%</td>
                       <td>34</td>
                       <td>1076.40</td>
                       <td>1076.40</td>
@@ -519,17 +509,6 @@
                       <td>1076.40</td>
                       <td>15%</td>
                       <td>34</td>
-                      <td>1076.40</td>
-                      <td>1076.40</td>
-                      <td>10.3</td>
-                    </tr>
-                    <tr>
-                      <td>42451467</td>
-                      <td>42451467</td>
-                      <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
-                      <td>1076.40</td>
-                      <td>1076.40</td>
-                      <td>15%</td>
                       <td>34</td>
                       <td>1076.40</td>
                       <td>1076.40</td>
@@ -543,17 +522,6 @@
                       <td>1076.40</td>
                       <td>15%</td>
                       <td>34</td>
-                      <td>1076.40</td>
-                      <td>1076.40</td>
-                      <td>10.3</td>
-                    </tr>
-                    <tr>
-                      <td>42451467</td>
-                      <td>42451467</td>
-                      <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
-                      <td>1076.40</td>
-                      <td>1076.40</td>
-                      <td>15%</td>
                       <td>34</td>
                       <td>1076.40</td>
                       <td>1076.40</td>
@@ -566,6 +534,46 @@
                       <td>1076.40</td>
                       <td>1076.40</td>
                       <td>15%</td>
+                      <td>34</td>
+                      <td>34</td>
+                      <td>1076.40</td>
+                      <td>1076.40</td>
+                      <td>10.3</td>
+                    </tr>
+                    <tr>
+                      <td>42451467</td>
+                      <td>42451467</td>
+                      <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
+                      <td>1076.40</td>
+                      <td>1076.40</td>
+                      <td>15%</td>
+                      <td>34</td>
+                      <td>34</td>
+                      <td>1076.40</td>
+                      <td>1076.40</td>
+                      <td>10.3</td>
+                    </tr>
+                    <tr>
+                      <td>42451467</td>
+                      <td>42451467</td>
+                      <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
+                      <td>1076.40</td>
+                      <td>1076.40</td>
+                      <td>15%</td>
+                      <td>34</td>
+                      <td>34</td>
+                      <td>1076.40</td>
+                      <td>1076.40</td>
+                      <td>10.3</td>
+                    </tr>
+                    <tr>
+                      <td>42451467</td>
+                      <td>42451467</td>
+                      <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
+                      <td>1076.40</td>
+                      <td>1076.40</td>
+                      <td>15%</td>
+                      <td>34</td>
                       <td>34</td>
                       <td>1076.40</td>
                       <td>1076.40</td>
