--- a/lk15.html
+++ b/lk15.html
@@ -587,6 +587,55 @@
           </div>
         </div>
       </div>
+      <div class="footer">
+        <div class="footer_line">
+          <div class="title_line title_line_adaptive">
+            <div class="title_line_t filter">
+              Фильтры поиска
+            </div>
+          </div>
+          <div class="modal_line">
+            <a href="#" class="closebig"></a>
+            <h3>Фильтры поиска</h3>
+            <div class="component_body">
+              <div class="l_p">
+                <div class="line_param_input">
+                  <div class="label_in">
+                    <!--                    <input type="text" class="tinput" />-->
+                    <input type="text" class="tinput tinput_menu" />
+                    <label class="tlabel" for>Склад обслуживания</label>
+                    <span class="array_down"></span>
+                    <ul class="sklad_menu">
+                      <li>Свой</li>
+                      <li>Чужой</li>
+                      <li>Все</li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="line_param_input">
+                  <div class="label_in">
+                    <input type="text" class="tinput" />
+                    <label class="tlabel" for>Документы</label>
+                    <span class="array_down"></span>
+                  </div>
+                </div>
+              </div>
+              <div class="r_p">
+                <div class="line_param_input">
+                  <div class="label_in">
+                    <input type="text" class="tinput" required />
+                    <label class="tlabel" for>ID / ФИО покупателя</label>
+                  </div>
+                </div>
+                <div class="nav_links">
+                  <a class="brd_green fill w50" href="#">Показать</a>
+                  <a class="brd_green w50 last" href="#">Сбросить</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
