--- a/lk5.html
+++ b/lk5.html
@@ -494,6 +494,19 @@
               <div class="l_p">
                 <div class="line_param_input">
                   <div class="label_in">
+<!--                    <input type="text" class="tinput" />-->
+                    <input type="text" class="tinput tinput_menu" />
+                    <label class="tlabel" for>Склад обслуживания</label>
+                    <span class="array_down"></span>
+                    <ul class="sklad_menu">
+                      <li>Свой</li>
+                      <li>Чужой</li>
+                      <li>Все</li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="line_param_input">
+                  <div class="label_in">
                     <input type="text" class="tinput" />
                     <label class="tlabel" for>Документы</label>
                     <span class="array_down"></span>
