--- a/lk5.html
+++ b/lk5.html
@@ -238,6 +238,33 @@
                           <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
                         </div>
                       </th>
+                      <th>
+                        <div>
+                          <span>Сумма</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
+                          <span>Комментарий</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
+                          <span>Количество</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
                     </tr>
                   </thead>
                   <tbody>
@@ -255,6 +282,9 @@
                     <td>805903</td>
                     <td>234589</td>
                     <td>Продажа</td>
+                    <td>758739</td>
+                    <td>Большой и длинный комментарий</td>
+                    <td>12847</td>
                   </tr>
                   <tr>
                     <td>
@@ -270,6 +300,9 @@
                     <td>805903</td>
                     <td>234589</td>
                     <td>Продажа</td>
+                    <td>758739</td>
+                    <td>Большой и длинный комментарий</td>
+                    <td>12847</td>
                   </tr>
                   <tr>
                     <td>
@@ -285,6 +318,9 @@
                     <td>805903</td>
                     <td>234589</td>
                     <td>Продажа</td>
+                    <td>758739</td>
+                    <td>Большой и длинный комментарий</td>
+                    <td>12847</td>
                   </tr>
                   <tr>
                     <td>
@@ -300,6 +336,9 @@
                     <td>805903</td>
                     <td>234589</td>
                     <td>Возврат</td>
+                    <td>758739</td>
+                    <td>Большой и длинный комментарий</td>
+                    <td>12847</td>
                   </tr>
                   <tr>
                     <td>
@@ -315,6 +354,9 @@
                     <td>805903</td>
                     <td>234589</td>
                     <td>Возврат</td>
+                    <td>758739</td>
+                    <td>Большой и длинный комментарий</td>
+                    <td>12847</td>
                   </tr>
                   <tr>
                     <td>
@@ -330,6 +372,9 @@
                     <td>805903</td>
                     <td>234589</td>
                     <td>Возврат</td>
+                    <td>758739</td>
+                    <td>Большой и длинный комментарий</td>
+                    <td>12847</td>
                   </tr>
                   <tr>
                     <td>
@@ -345,6 +390,9 @@
                     <td>805903</td>
                     <td>234589</td>
                     <td>Возврат</td>
+                    <td>758739</td>
+                    <td>Большой и длинный комментарий</td>
+                    <td>12847</td>
                   </tr>
                   </tbody>
                 </table>
