--- a/lk16.html
+++ b/lk16.html
@@ -249,13 +249,9 @@
         <div class="component_body">
           <div class="line_param_input">
             <div class="l_p">
-              <div class="line_param">
-                <div class="line_param_top">
-                  Наличка
-                </div>
-                <div class="line_param_bottom">
-                  500
-                </div>
+              <div style="margin-bottom: 20px">
+                <span class="line_param_top">Наличка</span>
+                <input value="23 |" class="input_edit"/>
               </div>
               <div class="line_param">
                 <div class="line_param_top">
@@ -267,13 +263,9 @@
               </div>
             </div>
             <div class="r_p">
-              <div class="line_param">
-                <div class="line_param_top">
-                  Безнал
-                </div>
-                <div class="line_param_bottom">
-                  100
-                </div>
+              <div style="margin-bottom: 20px">
+                <span class="line_param_top">Безнал</span>
+                <input value="100 |" class="input_edit"/>
               </div>
             </div>
           </div>
