--- a/lk13.html
+++ b/lk13.html
@@ -225,6 +225,7 @@
                   <thead>
                     <tr class="head_t">
                       <th style="width: 35%">Наименование</th>
+                      <th>Артикул</th>
                       <th>Категория</th>
                       <th>Цена</th>
                       <th>Баллы</th>
@@ -236,48 +237,98 @@
                   <tbody>
                     <tr>
                       <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
+                      <td>115</td>
                       <td>VIP - Продукция</td>
                       <td>128</td>
                       <td>128</td>
                       <td>24</td>
                       <td>457</td>
-                      <td>128</td>
+                      <td class="edit_column">
+                        <span class="not_edit">128</span>
+                        <div class="block_edit">
+                          <span class="line_param_top_edit">Приход</span>
+                          <input value="23 |" class="input_edit" style="background: inherit" />
+                          <img src="./images/array-drop-top.svg" alt="array-drop-top" class="array_top_edit">
+                          <img src="./images/array-drop-down.svg" alt="array-drop-down" class="array_bottom_edit">
+                        </div>
+                        <img src="./images/delete.svg" alt="delete" class="input_edit_icon">
+                      </td>
                     </tr>
                     <tr>
                       <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
+                      <td>115</td>
                       <td>VIP - Продукция</td>
                       <td>128</td>
                       <td>128</td>
                       <td>24</td>
                       <td>457</td>
-                      <td>128</td>
+                      <td class="edit_column">
+                        <span class="not_edit">128</span>
+                        <div class="block_edit">
+                          <span class="line_param_top_edit">Приход</span>
+                          <input value="23 |" class="input_edit" style="background: inherit" />
+                          <img src="./images/array-drop-top.svg" alt="array-drop-top" class="array_top_edit">
+                          <img src="./images/array-drop-down.svg" alt="array-drop-down" class="array_bottom_edit">
+                        </div>
+                        <img src="./images/delete.svg" alt="delete" class="input_edit_icon">
+                      </td>
                     </tr>
                     <tr>
                       <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
+                      <td>115</td>
                       <td>VIP - Продукция</td>
                       <td>128</td>
                       <td>128</td>
                       <td>24</td>
                       <td>457</td>
-                      <td>128</td>
+                      <td class="edit_column">
+                        <span class="not_edit">128</span>
+                        <div class="block_edit">
+                          <span class="line_param_top_edit">Приход</span>
+                          <input value="23 |" class="input_edit" style="background: inherit" />
+                          <img src="./images/array-drop-top.svg" alt="array-drop-top" class="array_top_edit">
+                          <img src="./images/array-drop-down.svg" alt="array-drop-down" class="array_bottom_edit">
+                        </div>
+                        <img src="./images/delete.svg" alt="delete" class="input_edit_icon">
+                      </td>
                     </tr>
                     <tr>
                       <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
+                      <td>115</td>
                       <td>VIP - Продукция</td>
                       <td>128</td>
                       <td>128</td>
                       <td>24</td>
                       <td>457</td>
-                      <td>128</td>
+                      <td class="edit_column">
+                        <span class="not_edit">128</span>
+                        <div class="block_edit">
+                          <span class="line_param_top_edit">Приход</span>
+                          <input value="23 |" class="input_edit" style="background: inherit" />
+                          <img src="./images/array-drop-top.svg" alt="array-drop-top" class="array_top_edit">
+                          <img src="./images/array-drop-down.svg" alt="array-drop-down" class="array_bottom_edit">
+                        </div>
+                        <img src="./images/delete.svg" alt="delete" class="input_edit_icon">
+                      </td>
                     </tr>
                     <tr>
                       <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
+                      <td>115</td>
                       <td>VIP - Продукция</td>
                       <td>128</td>
                       <td>128</td>
                       <td>24</td>
                       <td>457</td>
-                      <td>128</td>
+                      <td class="edit_column">
+                        <span class="not_edit">128</span>
+                        <div class="block_edit">
+                          <span class="line_param_top_edit">Приход</span>
+                          <input value="23 |" class="input_edit" style="background: inherit" />
+                          <img src="./images/array-drop-top.svg" alt="array-drop-top" class="array_top_edit">
+                          <img src="./images/array-drop-down.svg" alt="array-drop-down" class="array_bottom_edit">
+                        </div>
+                        <img src="./images/delete.svg" alt="delete" class="input_edit_icon">
+                      </td>
                     </tr>
                   </tbody>
                 </table>
